fix background image overflow problem

--- a/crypto-checker/src/app/core/top-bar/components/top-bar.component.scss
+++ b/crypto-checker/src/app/core/top-bar/components/top-bar.component.scss
@@ -4,6 +4,7 @@
   background-color: $secondary;
   @include flex-align;
   justify-content: space-between;
+  overflow: hidden;
 
   &__actions {
     height: 100%;
