--- a/crypto-checker/src/app/features/home/components/home.component.scss
+++ b/crypto-checker/src/app/features/home/components/home.component.scss
@@ -15,6 +15,7 @@
   @include flex-column;
   gap: 2rem;
   height: 100%;
+  overflow: hidden;
 
   .header {
     height: 35%;
