--- a/crypto-checker/src/app/features/sign-up/components/sign-up.component.scss
+++ b/crypto-checker/src/app/features/sign-up/components/sign-up.component.scss
@@ -9,7 +9,7 @@
   .heading {
     color: $secondary;
     font-size: 3rem;
-    padding-top: 11rem;
+    padding-top: 9rem;
   }
 
   .sign-up {
